--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,9 +7,15 @@ jobs:
        - image: circleci/node:7.10
      steps:
        - checkout
-       - run: 
+       - run:
+          name: list
+          command: ls
+       - run:
           name: cd-to-app
-          command: cd app
+          command: cd app/
+       - run:
+          name: list-again
+          command: ls
        - run:
           name: npm-install
           command: npm install
